--- a/DonorAppVersion2/Content/Site.css
+++ b/DonorAppVersion2/Content/Site.css
@@ -18,56 +18,66 @@ textarea {
 
 
 
-.custom-success-message{
-    padding:10px;
-    border-radius:10px;
-    border:1px solid green;
-    background:#e1ffde;
-    color:green;
-    font-weight:bold;
+.custom-success-message {
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid green;
+    background: #e1ffde;
+    color: green;
+    font-weight: bold;
 }
 
-.custom-warning-message{
-    padding:10px;
-    border-radius:10px;
-    border:1px solid orange;
-    background:#fff1da;
-    color:orange;
-    font-weight:bold;
+.custom-warning-message {
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid orange;
+    background: #fff1da;
+    color: orange;
+    font-weight: bold;
 }
 
-.custom-error-message{
-    padding:10px;
-    border-radius:10px;
-    border:1px solid red;
-    background:#ffeded;
-    color:red;
-    font-weight:bold;
+.custom-error-message {
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid red;
+    background: #ffeded;
+    color: red;
+    font-weight: bold;
 }
 
-.myTile{
-    padding:20px;
-    background-color:#f5f5f5;
-    border:1px solid #ccc;
-    border-radius:10px;
+.myTile {
+    padding: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 10px;
 }
 
-.hiddencontent{
-    display:none;
-}
-.accountStatusActive{
-    color:green;
+.hiddencontent {
+    display: none;
 }
 
-.accountStatusInactive{
-    color:red;
+.accountStatusActive {
+    color: green;
+}
+
+.accountStatusInactive {
+    color: red;
 }
 
 
-.text-danger
-{
-    font-size:xx-small;
-    color:red;
-    font-weight:bold;
+.text-danger {
+    font-size: xx-small;
+    color: red;
+    font-weight: bold;
+}
 
+
+.dashboardtile {
+    -webkit-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
+    -moz-box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
+    box-shadow: 2px 2px 5px -1px rgba(0,0,0,0.75);
+    
+    
+    
+    padding: 10px;
 }
