--- a/DonorAppVersion2/Views/Shared/_Layout.cshtml
+++ b/DonorAppVersion2/Views/Shared/_Layout.cshtml
@@ -27,13 +27,16 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="~/Parent/Login">Parent Portal</a>
+                        <a href="~/Parent/Login">Parents Portal</a>
                     </li>
                     <li>
-                        <a href="~/Donor/Login">Donor Portal</a>
+                        <a href="~/Donor/Login">Donors Portal</a>
                     </li>
                     <li>
-                        <a href="~/Partner/Login">Partner Portal</a>
+                        <a href="~/Partner/Login">Agency Portal</a>
+                    </li>
+                    <li>
+                        <a href="~/Admin/Login">Admins Portal</a>
                     </li>
                 </ul>
             </div>
