--- a/DonorAppVersion2/Views/Parent/PayRegistrationFees.cshtml
+++ b/DonorAppVersion2/Views/Parent/PayRegistrationFees.cshtml
@@ -26,6 +26,7 @@
 
     <!-- Specify a Buy Now button. -->
     <input type="hidden" name="cmd" value="_xclick">
+    <input type="hidden" name="return" value="http://localhost:59662/Paypal/RedirectFromPaypal">
 
     <!-- Specify details about the item that buyers will purchase. -->
     Description of Payment
