--- a/DonorAppVersion2/Views/Shared/_adminLayout.cshtml
+++ b/DonorAppVersion2/Views/Shared/_adminLayout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Donor Portal</title>
+    <title>@ViewBag.Title - Admin Portal</title>
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -21,47 +21,37 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Donor 21", "Dashboard", "Donor", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Donor 21", "Dashboard", "Admin", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="~/Donor/Dashboard">Dashboard</a>                        
+                        <a href="~/Admin/Dashboard">Dashboard</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="~/Donor/MyDonorCycles">My Donor Cycle Involvements</a></li>
+                            <li><a href="~/Admin/AddAgency">Add New Partners / Agency</a></li>
+                            <li><a href="~/Admin/ViewAllAgencies">View All Partners / Agency</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">My Match Requests</a></li>
-                            <li><a href="#">Submit New Match Requests</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Assigned Matches</a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Payments <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">My Pending Payments</a></li>
-                            <li><a href="#">Payments History</a></li>
-                        </ul>
-                    </li>
+
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Settings <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="~/Donor/DonorProfile">Edit Profile</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Reports</a></li>
+                            <li><a href="~/Admin/Settings">Settings</a></li>
                         </ul>
                     </li>
+
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#" style="font-size:xx-small; color:#ffd800"> Welcome @Session["DonorName"].ToString() [DID : @Session["DonorId"].ToString() ]</a>
+                        <a href="#" style="font-size:xx-small; color:#fff"> Welcome @Session["AdminName"].ToString()</a>
                     </li>
                     <li>
-                        <a href="~/Donor/SessionTimeout">Logout</a>
+                        <a href="~/Admin/SessionTimeout">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -72,7 +62,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p style="text-align:center">&copy; @DateTime.Now.Year - Donor21 - Donor Portal</p>
+            <p style="text-align:center">&copy; @DateTime.Now.Year - Donor21 - Admin Portal</p>
         </footer>
     </div>
 
