--- a/DonorAppVersion2/Views/Donor/Verification.cshtml
+++ b/DonorAppVersion2/Views/Donor/Verification.cshtml
@@ -34,7 +34,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ContactVerificationCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ContactVerificationCode, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                <input name="ContactVerificationCode" class="form-control" required />
                 @Html.ValidationMessageFor(model => model.ContactVerificationCode, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -48,7 +48,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EmailVerificationCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.EmailVerificationCode, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                <input name="EmailVerificationCode" class="form-control" required />
                 @Html.ValidationMessageFor(model => model.EmailVerificationCode, "", new { @class = "text-danger" })
             </div>
         </div>
