--- a/DonorAppVersion2/Views/Parent/Verification.cshtml
+++ b/DonorAppVersion2/Views/Parent/Verification.cshtml
@@ -1,23 +1,19 @@
 ﻿@model DonorAppVersion2.Models.Parent
-
 @{
     ViewBag.Title = "Please verify your details";
 }
-
 <h2>Step 2 : Verification</h2>
-
 
 @using (Html.BeginForm("Verification", "Parent", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Please verify below details</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ParentId)
 
-        
         <span class="custom-warning-message"> We have sent a 6 digit OTP on both your contact details, please check if you have received the OTP and enter them below.</span>
         <br /><br /><br />
         <div class="form-group">
@@ -27,7 +23,6 @@
                 <label class="label label-success">@ViewBag.SuccessMessage</label>
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.ContactNumber, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -35,15 +30,13 @@
                 @Html.ValidationMessageFor(model => model.ContactNumber, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.ContactVerificationCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ContactVerificationCode, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                <input name="ContactVerificationCode" class="form-control" required />
                 @Html.ValidationMessageFor(model => model.ContactVerificationCode, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -51,15 +44,13 @@
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             @Html.LabelFor(model => model.EmailVerificationCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.EmailVerificationCode, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                <input name="EmailVerificationCode" class="form-control" required />
                 @Html.ValidationMessageFor(model => model.EmailVerificationCode, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Verify My Details" class="btn btn-danger btn-block" />
@@ -67,7 +58,6 @@
         </div>
     </div>
 }
-
 
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery-3.2.1.min.js"></script>
