--- a/DonorAppVersion2/Views/Donor/SubmitNewUpdate.cshtml
+++ b/DonorAppVersion2/Views/Donor/SubmitNewUpdate.cshtml
@@ -42,8 +42,35 @@
         </div>
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Submit Update" class="btn btn-primary btn-block" /><br /><br />
+        <div class="col-md-2">
+            <strong>Profile Update</strong>
+        </div>
+        
+        <div class="col-md-10">
+            <a href="~/Donor/EditDonorProfile" target="_blank"> Click here to update your profile</a><br />
+            (If your profile have changed, like address or contact information, please update it to latest using above link)
+            
         </div>
     </div>
+
+     
+        <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Proceed to Next Step" class="btn btn-primary btn-block" /><br /><br />
+        </div>
+    </div>
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
