--- a/DonorAppVersion2/Views/Donor/SubmitUpdate.cshtml
+++ b/DonorAppVersion2/Views/Donor/SubmitUpdate.cshtml
@@ -11,8 +11,8 @@
     var donorcycleid = "";
     try
     {
-        donorcycleid = Model.DonorCycle.DonorCycleId.ToString();
-        var donorid = Model.DonorCycle.DonorId;
+        donorcycleid = Model.DonorCycleEgg.DonorCycleId.ToString();
+        var donorid = Model.DonorCycleEgg.DonorId;
     }
     catch (Exception ex)
     {
