--- a/DonorAppVersion2/Views/Parent/ConfirmCycle.cshtml
+++ b/DonorAppVersion2/Views/Parent/ConfirmCycle.cshtml
@@ -174,7 +174,7 @@
                     }
             </table>
             
-            <input type="submit" value="Confirm & Add Donor Cycle" class="btn btn-success" />
+            <a href="~/Parent/Dashboard" class="btn btn-success">Confirm & Add Donor Cycle</a>            
         }
         else
         {
