--- a/DonorAppVersion2/Views/Shared/_adminLayout.cshtml
+++ b/DonorAppVersion2/Views/Shared/_adminLayout.cshtml
@@ -34,6 +34,7 @@
                             <li><a href="~/Admin/AddAgency">Add New Partners / Agency</a></li>
                             <li><a href="~/Admin/ViewAllAgencies">View All Partners / Agency</a></li>
                             <li role="separator" class="divider"></li>
+                            <li><a href="~/Admin/MedicalQuestions">Questions for Medical Report</a></li>
                         </ul>
                     </li>
 
