--- a/DonorAppVersion2/Views/Admin/Dashboard.cshtml
+++ b/DonorAppVersion2/Views/Admin/Dashboard.cshtml
@@ -8,43 +8,48 @@
 <h2>Dashboard</h2>
 
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-md-12">
+        <hr />
+        <div class="row">
+            <div class="col-md-3">
+                <div class="dashboardtile">
+                    Total Parents Registered<br />
+                    <h4>
+                        @Model.Parent.Count() &nbsp;&nbsp;&nbsp;
+                        <a href="~/Admin/ParentList" class="label label-primary">View List</a>
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="dashboardtile">
+                    Total Donors Registered<br />
+                    <h4>
+                        @Model.Donor.Count() &nbsp;&nbsp;&nbsp;
+                        <a href="#" class="label label-primary">View List</a>
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="dashboardtile">
+                    Total Donor Cycles Created<br />
+                    <h4>
+                        @Model.DonorCycleEgg.Count() &nbsp;&nbsp;&nbsp;
+                        <a href="#" class="label label-primary">View List</a>
+                    </h4>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="dashboardtile">
+                    Total Payments Recieved<br />
+                    <h4>
+                        @Model.ParentPayments.Count() &nbsp;&nbsp;&nbsp;
+                        <a href="#" class="label label-primary">View List</a>
+                    </h4>
+                </div>
+            </div>
+        </div><br />
         <hr />
         <h4>Recent Activities</h4>
         No Activities Recorded Yet!
-    </div>
-
-    <div class="col-md-4">
-        <div class="dashboardtile">
-            Total Parents Registered<br />
-            <h4>
-                @Model.Parent.Count() &nbsp;&nbsp;&nbsp;
-                <a href="~/Admin/ParentList" class="label label-primary">View List</a>
-            </h4>
-        </div>
-        <hr />
-        <div class="dashboardtile">
-            Total Donors Registered<br />
-            <h4>
-                @Model.Donor.Count() &nbsp;&nbsp;&nbsp;
-                <a href="#" class="label label-primary">View List</a>
-            </h4>
-        </div>
-        <hr />
-        <div class="dashboardtile">
-            Total Donor Cycles Created<br />
-            <h4>
-                @Model.DonorCycleEgg.Count() &nbsp;&nbsp;&nbsp;
-                <a href="#" class="label label-primary">View List</a>
-            </h4>
-        </div>
-        <hr />
-        <div class="dashboardtile">
-            Total Payments Recieved<br />
-            <h4>
-                @Model.ParentPayments.Count() &nbsp;&nbsp;&nbsp;
-                <a href="#" class="label label-primary">View List</a>
-            </h4>
-        </div>
     </div>
 </div>
