--- a/DonorAppVersion2/Views/Shared/_partnerLayout.cshtml
+++ b/DonorAppVersion2/Views/Shared/_partnerLayout.cshtml
@@ -3,12 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Donor Portal</title>
+    <title>@ViewBag.Title - Partner Portal</title>
+
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
 
-    }
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -24,29 +28,42 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="~/Donor/Dashboard">Dashboard</a>                        
+                        <a href="~/Partner/Dashboard">Dashboard</a>
                     </li>
-                    <li>
-                        <a href="~/Donor/DonorProfile">Profile</a>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Staff Details <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+
+                            <li>
+                                <a href="~/Partner/AddStaff">Add New Staff Member</a>
+                            </li>
+                            <li><a href="~/Partner/ViewStaff">View All Staff Members</a></li>
+                        </ul>
                     </li>
-                    <li>
-                        <a href="~/Donor/Settings">Settings</a>
+
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Match Details <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+
+                            <li>
+                                <a href="~/Partner/MakeNewMatch">Submit New Match</a>
+                            </li>
+                            <li><a href="~/Partner/PotentialMatchDetails">View All Potential Matches</a></li>
+                        </ul>
                     </li>
                 </ul>
-
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#"> Welcome @Session["PartnerName"].ToString()</a>
-                        
+
                     </li>
                     <li>
-                        <a href="~/Donor/SessionTimeout">Logout</a>
+                        <a href="~/Partner/SessionTimeout">Logout</a>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-
     <div class="container body-content">
         @RenderBody()
         <hr />
@@ -54,7 +71,6 @@
             <p style="text-align:center">&copy; @DateTime.Now.Year - Donor21 - Partner Portal</p>
         </footer>
     </div>
-
     <script src="~/Scripts/jquery-3.2.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
